--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "iptv.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "build": "echo 'Nothing to build'",
+    "vercel-build": "npm install"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "express": "^4.18.2",
+    "dotenv": "^16.4.7",
     "express-session": "^1.17.3",
     "mongodb": "^6.3.0",
     "node-fetch": "^2.7.0"
